--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="../Hover-master/">
   <link rel="stylesheet" href="./style.css">
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </head>
 
@@ -27,5 +27,11 @@
   <div id="root">
   </div>
 </body>
+<script>
 
+  $(document).ready(function(){
+    $('.carousel').carousel();
+  });
+  
+</script>
 </html>
